fix(persistence)!: V1 schema shape corrections before the 1.0.0 freeze (#450)
* docs(conventions): a multi-valued column is TEXT[], not a delimited string

Four columns hold comma-delimited strings that Java splits — access_tokens
scopes, push_scopes and api_scopes, and webhook_subscribers.events — while
vetting_chain_orders.vetters is a real array. The array is the direction: it
keeps elements visible to the database, so membership is indexable and
cardinality is enforced rather than commented.

The concrete motivation is a query the delimited form cannot serve without a
full scan and a split in Java: which tokens can reach a given marketplace,
which is the token-revocation counterpart of the blast-radius query after a
marketplace is compromised.

Recorded beside the native-enum rule so it reads as a convention rather than
the rationale for one conversion.

Claude-Session: https://claude.ai/code/session_01FrQiLATTYTNVqats1sXXar
Signed-off-by: Jimisola Laursen <jimisola@jimisola.com>

* fix(persistence): V1 schema shape corrections before the 1.0.0 freeze

Four shape decisions in V1__init.sql that cost one line now and a migration
each after 1.0.0 freezes the file.

- vetting_runs.trigger becomes the native enum vetting_run_trigger, which is
  what V1's own header and the code conventions require of a closed set. The
  API already published exactly these three values.
- marketplaces.name gains CHECK (name ~ '^[a-z0-9][a-z0-9_-]*$'). Defence in
  depth: MarketplaceRegistrationService already refuses a bad name, so the
  constraint exists for every other write path, and because the scope columns
  were built on that pattern holding.
- access_tokens (principal) gains an index; every token listing filters on it.
- Five delimited columns become TEXT[] — access_tokens scopes, push_scopes and
  api_scopes, webhook_subscribers.events, and vetting_overrides.blocking_vetters,
  the last found while scoping this and not in the original finding.

Every scope list is now CHECK (